--- a/mensa5/templates/alt/bewertung.html
+++ b/mensa5/templates/alt/bewertung.html
@@ -1,4 +1,4 @@
-<ion-view style="" id="page5" title="Bewertung">
+<ion-view style="" id="page2" title="Bewertung">
     <ion-content class="has-header" padding="true">
     <?php 
 
@@ -7,9 +7,7 @@ $datum = date("Y-m-d");
 
 $mysqli = new mysqli("172.18.0.171", "mensaDBuser", "passwort", "mensadb");
    
-   $i = 1; 
-   $nameAkt;
-   $idAkt;
+    
     $result = $mysqli->query("SELECT gericht.gerichtID, gericht.gericht_name FROM gericht where gericht.datum = '".$datum."'"); 
 while ($obj = mysqli_fetch_object($result)) {
         $name = substr($obj->gericht_name,0,-1*(strlen($obj->gericht_name)-strpos($obj->gericht_name,"(")));
@@ -21,11 +19,15 @@ while ($obj = mysqli_fetch_object($result)) {
          // $wertung = $wertung." von 5 Sterne";
         //}
         //echo("<a href=gericht_bewerten_formular.php?id=".$obj->gerichtID.">".$name ." bewerten</a><p>");
-        if($i==3){
-              $nameAkt = $name;
-                $idAkt = $obj->gerichtID;          
+        switch($i){
+        case 1: // echo('<ion-item style="" ui-sref="bewertung">'.$name.'</ion-item>');
+        break;
+        case 2:  //echo('<ion-item style="" ui-sref="bewertung2">'.$name.'</ion-item>');
+        break;
+       case 3:  //echo('<ion-item style="" ui-sref="bewertung3">'.$name.'</ion-item>');
+        break;
+          
         }
-        $i++;
         
 
     }
@@ -37,30 +39,30 @@ while ($obj = mysqli_fetch_object($result)) {
 
             
             ?>
-        <h1 style="color: rgb(0, 0, 0); text-align: center;" id="bewertung-heading1"><?php  echo($nameAkt); ?></h1>
+        <h1 style="color: rgb(0, 0, 0); text-align: center;" id="bewertung-heading1"><?php
+          echo($datum);
+        ?></h1>
         <div style="" class="button-bar">
-            <button class="button button-positive  button-block" id="bewertung-button1">doof</button>
+            <button class="button button-positive  button-block" id="bewertung-button1">1</button>
             <button class="button button-positive  button-block" id="bewertung-button2">2</button>
             <button class="button button-positive  button-block" id="bewertung-button4">3</button>
             <button class="button button-positive  button-block" id="bewertung-button5">4</button>
-            <button class="button button-positive  button-block" id="bewertung-button3">sehr gut</button>
+            <button class="button button-positive  button-block" id="bewertung-button3">5</button>
         </div>
-        <form style="" class="list" method="POST" action="formular_absenden.php?id=<?php echo($idAkt); ?>">
-            <ion-item style="" class="range range-positive">Menge&nbsp; 
-            viel 
+        <form style="" class="list">
+            <ion-item style="" class="range range-positive">Menge
                 <input name="menge" max="1" min="-1" value="0" type="range">
-                wenig
             </ion-item>
             <ion-toggle style="" name="salzig" toggle-class="toggle-positive">salzig</ion-toggle>
             <label style="" name="kommentar" class="item item-input">
                 <span class="input-label">Kommentar</span>
-                <input placeholder="" type="text" name="kommentar">
+                <input placeholder="" type="text">
             </label>
             <label style="" name="e-mail" class="item item-input">
                 <span class="input-label">E-mail</span>
-                <input placeholder="" type="email"  name="e-mail">
+                <input placeholder="" type="email">
             </label>
-
-        <button type="submit" class="button button-positive  button-block" id="bewertung-button6" href="formular_absenden.php?id=<?php echo($idAkt); ?>">Senden</a>
-         </form>   </ion-content>
+        </form>
+        <a class="button button-positive  button-block" id="bewertung-button6" href="tel:">Senden</a>
+    </ion-content>
 </ion-view>
